@@ -1,0 +1,2 @@
+prog: wcscat
+vgopts: -q
