@@ -68,6 +68,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 501365  syscall userfaultfd not wrapped
 501846  Add x86 Linux shm wrappers
 501850  FreeBSD syscall arguments 7 and 8 incorrect.
+501893  Missing suppression for __wcscat_avx2 (strcat-strlen-avx2.h.S:68)?
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
